Compiladores_AlfredoMarquinaMeseguer2.3_DanielMartinezPrior2.1/UltraMegaMiniC/miniC.output
Terminals unused in grammar

    REAL


State 73 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 $@1: ε

    2 program: $@1 EMPIEZA ID A_PAREN C_PAREN A_LLAVE declarations statement_list C_LLAVE

    3 $@2: ε

    4 declarations: declarations VAR $@2 identifier_list SEMICOLON

    5 $@3: ε

    6 declarations: declarations CONST $@3 identifier_list SEMICOLON
    7             | ε

    8 identifier_list: asig
    9                | identifier_list COMA asig

   10 asig: ID
   11     | ID ASIG_OP expression

   12 statement_list: statement_list statement
   13               | ε

   14 statement: ID ASIG_OP expression SEMICOLON
   15          | A_LLAVE statement_list C_LLAVE
   16          | SI A_PAREN expression C_PAREN statement SINO statement
   17          | SI A_PAREN expression C_PAREN statement
   18          | MIENTRAS A_PAREN expression C_PAREN statement
   19          | ESCRIBIR print_list SEMICOLON
   20          | LEER read_list SEMICOLON
   21          | error SEMICOLON

   22 print_list: print_item
   23           | print_list COMA print_item

   24 print_item: expression
   25           | STRING

   26 read_list: ID
   27          | read_list COMA ID

   28 expression: expression MAS_OP expression
   29           | expression MENOS_OP expression
   30           | expression POR_OP expression
   31           | expression DIV_OP expression
   32           | MENOS_OP expression
   33           | A_PAREN expression C_PAREN
   34           | ID
   35           | NUM


Terminals, with rules where they appear

    $end (0) 0
    error (256) 21
    EMPIEZA (258) 2
    LEER (259) 20
    ESCRIBIR (260) 19
    A_PAREN (261) 2 16 17 18 33
    C_PAREN (262) 2 16 17 18 33
    SEMICOLON (263) 4 6 14 19 20 21
    COMA (264) 9 23 27
    ASIG_OP (265) 11 14
    MAS_OP (266) 28
    MENOS_OP (267) 29 32
    A_LLAVE (268) 2 15
    C_LLAVE (269) 2 15
    VAR (270) 4
    CONST (271) 6
    SI (272) 16 17
    SINO (273) 16
    MIENTRAS (274) 18
    POR_OP (275) 30
    DIV_OP (276) 31
    REAL (277)
    STRING <lexema> (278) 25
    ID <lexema> (279) 2 10 11 14 26 27 34
    NUM <lexema> (280) 35
    UMENOS (281)


Nonterminals, with rules where they appear

    $accept (27)
        on left: 0
    program (28)
        on left: 2
        on right: 0
    $@1 (29)
        on left: 1
        on right: 2
    declarations <codigo> (30)
        on left: 4 6 7
        on right: 2 4 6
    $@2 (31)
        on left: 3
        on right: 4
    $@3 (32)
        on left: 5
        on right: 6
    identifier_list <codigo> (33)
        on left: 8 9
        on right: 4 6 9
    asig <codigo> (34)
        on left: 10 11
        on right: 8 9
    statement_list <codigo> (35)
        on left: 12 13
        on right: 2 12 15
    statement <codigo> (36)
        on left: 14 15 16 17 18 19 20 21
        on right: 12 16 17 18
    print_list <codigo> (37)
        on left: 22 23
        on right: 19 23
    print_item <codigo> (38)
        on left: 24 25
        on right: 22 23
    read_list <codigo> (39)
        on left: 26 27
        on right: 20 27
    expression <codigo> (40)
        on left: 28 29 30 31 32 33 34 35
        on right: 11 14 16 17 18 24 28 29 30 31 32 33


State 0

    0 $accept: • program $end

    $default  reduce using rule 1 ($@1)

    program  go to state 1
    $@1      go to state 2


State 1

    0 $accept: program • $end

    $end  shift, and go to state 3


State 2

    2 program: $@1 • EMPIEZA ID A_PAREN C_PAREN A_LLAVE declarations statement_list C_LLAVE

    EMPIEZA  shift, and go to state 4


State 3

    0 $accept: program $end •

    $default  accept


State 4

    2 program: $@1 EMPIEZA • ID A_PAREN C_PAREN A_LLAVE declarations statement_list C_LLAVE

    ID  shift, and go to state 5


State 5

    2 program: $@1 EMPIEZA ID • A_PAREN C_PAREN A_LLAVE declarations statement_list C_LLAVE

    A_PAREN  shift, and go to state 6


State 6

    2 program: $@1 EMPIEZA ID A_PAREN • C_PAREN A_LLAVE declarations statement_list C_LLAVE

    C_PAREN  shift, and go to state 7


State 7

    2 program: $@1 EMPIEZA ID A_PAREN C_PAREN • A_LLAVE declarations statement_list C_LLAVE

    A_LLAVE  shift, and go to state 8


State 8

    2 program: $@1 EMPIEZA ID A_PAREN C_PAREN A_LLAVE • declarations statement_list C_LLAVE

    $default  reduce using rule 7 (declarations)

    declarations  go to state 9


State 9

    2 program: $@1 EMPIEZA ID A_PAREN C_PAREN A_LLAVE declarations • statement_list C_LLAVE
    4 declarations: declarations • VAR $@2 identifier_list SEMICOLON
    6             | declarations • CONST $@3 identifier_list SEMICOLON

    VAR    shift, and go to state 10
    CONST  shift, and go to state 11

    $default  reduce using rule 13 (statement_list)

    statement_list  go to state 12


State 10

    4 declarations: declarations VAR • $@2 identifier_list SEMICOLON

    $default  reduce using rule 3 ($@2)

    $@2  go to state 13


State 11

    6 declarations: declarations CONST • $@3 identifier_list SEMICOLON

    $default  reduce using rule 5 ($@3)

    $@3  go to state 14


State 12

    2 program: $@1 EMPIEZA ID A_PAREN C_PAREN A_LLAVE declarations statement_list • C_LLAVE
   12 statement_list: statement_list • statement

    error     shift, and go to state 15
    LEER      shift, and go to state 16
    ESCRIBIR  shift, and go to state 17
    A_LLAVE   shift, and go to state 18
    C_LLAVE   shift, and go to state 19
    SI        shift, and go to state 20
    MIENTRAS  shift, and go to state 21
    ID        shift, and go to state 22

    statement  go to state 23


State 13

    4 declarations: declarations VAR $@2 • identifier_list SEMICOLON

    ID  shift, and go to state 24

    identifier_list  go to state 25
    asig             go to state 26


State 14

    6 declarations: declarations CONST $@3 • identifier_list SEMICOLON

    ID  shift, and go to state 24

    identifier_list  go to state 27
    asig             go to state 26


State 15

   21 statement: error • SEMICOLON

    SEMICOLON  shift, and go to state 28


State 16

   20 statement: LEER • read_list SEMICOLON

    ID  shift, and go to state 29

    read_list  go to state 30


State 17

   19 statement: ESCRIBIR • print_list SEMICOLON

    A_PAREN   shift, and go to state 31
    MENOS_OP  shift, and go to state 32
    STRING    shift, and go to state 33
    ID        shift, and go to state 34
    NUM       shift, and go to state 35

    print_list  go to state 36
    print_item  go to state 37
    expression  go to state 38


State 18

   15 statement: A_LLAVE • statement_list C_LLAVE

    $default  reduce using rule 13 (statement_list)

    statement_list  go to state 39


State 19

    2 program: $@1 EMPIEZA ID A_PAREN C_PAREN A_LLAVE declarations statement_list C_LLAVE •

    $default  reduce using rule 2 (program)


State 20

   16 statement: SI • A_PAREN expression C_PAREN statement SINO statement
   17          | SI • A_PAREN expression C_PAREN statement

    A_PAREN  shift, and go to state 40


State 21

   18 statement: MIENTRAS • A_PAREN expression C_PAREN statement

    A_PAREN  shift, and go to state 41


State 22

   14 statement: ID • ASIG_OP expression SEMICOLON

    ASIG_OP  shift, and go to state 42


State 23

   12 statement_list: statement_list statement •

    $default  reduce using rule 12 (statement_list)


State 24

   10 asig: ID •
   11     | ID • ASIG_OP expression

    ASIG_OP  shift, and go to state 43

    $default  reduce using rule 10 (asig)


State 25

    4 declarations: declarations VAR $@2 identifier_list • SEMICOLON
    9 identifier_list: identifier_list • COMA asig

    SEMICOLON  shift, and go to state 44
    COMA       shift, and go to state 45


State 26

    8 identifier_list: asig •

    $default  reduce using rule 8 (identifier_list)


State 27

    6 declarations: declarations CONST $@3 identifier_list • SEMICOLON
    9 identifier_list: identifier_list • COMA asig

    SEMICOLON  shift, and go to state 46
    COMA       shift, and go to state 45


State 28

   21 statement: error SEMICOLON •

    $default  reduce using rule 21 (statement)


State 29

   26 read_list: ID •

    $default  reduce using rule 26 (read_list)


State 30

   20 statement: LEER read_list • SEMICOLON
   27 read_list: read_list • COMA ID

    SEMICOLON  shift, and go to state 47
    COMA       shift, and go to state 48


State 31

   33 expression: A_PAREN • expression C_PAREN

    A_PAREN   shift, and go to state 31
    MENOS_OP  shift, and go to state 32
    ID        shift, and go to state 34
    NUM       shift, and go to state 35

    expression  go to state 49


State 32

   32 expression: MENOS_OP • expression

    A_PAREN   shift, and go to state 31
    MENOS_OP  shift, and go to state 32
    ID        shift, and go to state 34
    NUM       shift, and go to state 35

    expression  go to state 50


State 33

   25 print_item: STRING •

    $default  reduce using rule 25 (print_item)


State 34

   34 expression: ID •

    $default  reduce using rule 34 (expression)


State 35

   35 expression: NUM •

    $default  reduce using rule 35 (expression)


State 36

   19 statement: ESCRIBIR print_list • SEMICOLON
   23 print_list: print_list • COMA print_item

    SEMICOLON  shift, and go to state 51
    COMA       shift, and go to state 52


State 37

   22 print_list: print_item •

    $default  reduce using rule 22 (print_list)


State 38

   24 print_item: expression •
   28 expression: expression • MAS_OP expression
   29           | expression • MENOS_OP expression
   30           | expression • POR_OP expression
   31           | expression • DIV_OP expression

    MAS_OP    shift, and go to state 53
    MENOS_OP  shift, and go to state 54
    POR_OP    shift, and go to state 55
    DIV_OP    shift, and go to state 56

    $default  reduce using rule 24 (print_item)


State 39

   12 statement_list: statement_list • statement
   15 statement: A_LLAVE statement_list • C_LLAVE

    error     shift, and go to state 15
    LEER      shift, and go to state 16
    ESCRIBIR  shift, and go to state 17
    A_LLAVE   shift, and go to state 18
    C_LLAVE   shift, and go to state 57
    SI        shift, and go to state 20
    MIENTRAS  shift, and go to state 21
    ID        shift, and go to state 22

    statement  go to state 23


State 40

   16 statement: SI A_PAREN • expression C_PAREN statement SINO statement
   17          | SI A_PAREN • expression C_PAREN statement

    A_PAREN   shift, and go to state 31
    MENOS_OP  shift, and go to state 32
    ID        shift, and go to state 34
    NUM       shift, and go to state 35

    expression  go to state 58


State 41

   18 statement: MIENTRAS A_PAREN • expression C_PAREN statement

    A_PAREN   shift, and go to state 31
    MENOS_OP  shift, and go to state 32
    ID        shift, and go to state 34
    NUM       shift, and go to state 35

    expression  go to state 59


State 42

   14 statement: ID ASIG_OP • expression SEMICOLON

    A_PAREN   shift, and go to state 31
    MENOS_OP  shift, and go to state 32
    ID        shift, and go to state 34
    NUM       shift, and go to state 35

    expression  go to state 60


State 43

   11 asig: ID ASIG_OP • expression

    A_PAREN   shift, and go to state 31
    MENOS_OP  shift, and go to state 32
    ID        shift, and go to state 34
    NUM       shift, and go to state 35

    expression  go to state 61


State 44

    4 declarations: declarations VAR $@2 identifier_list SEMICOLON •

    $default  reduce using rule 4 (declarations)


State 45

    9 identifier_list: identifier_list COMA • asig

    ID  shift, and go to state 24

    asig  go to state 62


State 46

    6 declarations: declarations CONST $@3 identifier_list SEMICOLON •

    $default  reduce using rule 6 (declarations)


State 47

   20 statement: LEER read_list SEMICOLON •

    $default  reduce using rule 20 (statement)


State 48

   27 read_list: read_list COMA • ID

    ID  shift, and go to state 63


State 49

   28 expression: expression • MAS_OP expression
   29           | expression • MENOS_OP expression
   30           | expression • POR_OP expression
   31           | expression • DIV_OP expression
   33           | A_PAREN expression • C_PAREN

    C_PAREN   shift, and go to state 64
    MAS_OP    shift, and go to state 53
    MENOS_OP  shift, and go to state 54
    POR_OP    shift, and go to state 55
    DIV_OP    shift, and go to state 56


State 50

   28 expression: expression • MAS_OP expression
   29           | expression • MENOS_OP expression
   30           | expression • POR_OP expression
   31           | expression • DIV_OP expression
   32           | MENOS_OP expression •

    $default  reduce using rule 32 (expression)


State 51

   19 statement: ESCRIBIR print_list SEMICOLON •

    $default  reduce using rule 19 (statement)


State 52

   23 print_list: print_list COMA • print_item

    A_PAREN   shift, and go to state 31
    MENOS_OP  shift, and go to state 32
    STRING    shift, and go to state 33
    ID        shift, and go to state 34
    NUM       shift, and go to state 35

    print_item  go to state 65
    expression  go to state 38


State 53

   28 expression: expression MAS_OP • expression

    A_PAREN   shift, and go to state 31
    MENOS_OP  shift, and go to state 32
    ID        shift, and go to state 34
    NUM       shift, and go to state 35

    expression  go to state 66


State 54

   29 expression: expression MENOS_OP • expression

    A_PAREN   shift, and go to state 31
    MENOS_OP  shift, and go to state 32
    ID        shift, and go to state 34
    NUM       shift, and go to state 35

    expression  go to state 67


State 55

   30 expression: expression POR_OP • expression

    A_PAREN   shift, and go to state 31
    MENOS_OP  shift, and go to state 32
    ID        shift, and go to state 34
    NUM       shift, and go to state 35

    expression  go to state 68


State 56

   31 expression: expression DIV_OP • expression

    A_PAREN   shift, and go to state 31
    MENOS_OP  shift, and go to state 32
    ID        shift, and go to state 34
    NUM       shift, and go to state 35

    expression  go to state 69


State 57

   15 statement: A_LLAVE statement_list C_LLAVE •

    $default  reduce using rule 15 (statement)


State 58

   16 statement: SI A_PAREN expression • C_PAREN statement SINO statement
   17          | SI A_PAREN expression • C_PAREN statement
   28 expression: expression • MAS_OP expression
   29           | expression • MENOS_OP expression
   30           | expression • POR_OP expression
   31           | expression • DIV_OP expression

    C_PAREN   shift, and go to state 70
    MAS_OP    shift, and go to state 53
    MENOS_OP  shift, and go to state 54
    POR_OP    shift, and go to state 55
    DIV_OP    shift, and go to state 56


State 59

   18 statement: MIENTRAS A_PAREN expression • C_PAREN statement
   28 expression: expression • MAS_OP expression
   29           | expression • MENOS_OP expression
   30           | expression • POR_OP expression
   31           | expression • DIV_OP expression

    C_PAREN   shift, and go to state 71
    MAS_OP    shift, and go to state 53
    MENOS_OP  shift, and go to state 54
    POR_OP    shift, and go to state 55
    DIV_OP    shift, and go to state 56


State 60

   14 statement: ID ASIG_OP expression • SEMICOLON
   28 expression: expression • MAS_OP expression
   29           | expression • MENOS_OP expression
   30           | expression • POR_OP expression
   31           | expression • DIV_OP expression

    SEMICOLON  shift, and go to state 72
    MAS_OP     shift, and go to state 53
    MENOS_OP   shift, and go to state 54
    POR_OP     shift, and go to state 55
    DIV_OP     shift, and go to state 56


State 61

   11 asig: ID ASIG_OP expression •
   28 expression: expression • MAS_OP expression
   29           | expression • MENOS_OP expression
   30           | expression • POR_OP expression
   31           | expression • DIV_OP expression

    MAS_OP    shift, and go to state 53
    MENOS_OP  shift, and go to state 54
    POR_OP    shift, and go to state 55
    DIV_OP    shift, and go to state 56

    $default  reduce using rule 11 (asig)


State 62

    9 identifier_list: identifier_list COMA asig •

    $default  reduce using rule 9 (identifier_list)


State 63

   27 read_list: read_list COMA ID •

    $default  reduce using rule 27 (read_list)


State 64

   33 expression: A_PAREN expression C_PAREN •

    $default  reduce using rule 33 (expression)


State 65

   23 print_list: print_list COMA print_item •

    $default  reduce using rule 23 (print_list)


State 66

   28 expression: expression • MAS_OP expression
   28           | expression MAS_OP expression •
   29           | expression • MENOS_OP expression
   30           | expression • POR_OP expression
   31           | expression • DIV_OP expression

    POR_OP  shift, and go to state 55
    DIV_OP  shift, and go to state 56

    $default  reduce using rule 28 (expression)


State 67

   28 expression: expression • MAS_OP expression
   29           | expression • MENOS_OP expression
   29           | expression MENOS_OP expression •
   30           | expression • POR_OP expression
   31           | expression • DIV_OP expression

    POR_OP  shift, and go to state 55
    DIV_OP  shift, and go to state 56

    $default  reduce using rule 29 (expression)


State 68

   28 expression: expression • MAS_OP expression
   29           | expression • MENOS_OP expression
   30           | expression • POR_OP expression
   30           | expression POR_OP expression •
   31           | expression • DIV_OP expression

    $default  reduce using rule 30 (expression)


State 69

   28 expression: expression • MAS_OP expression
   29           | expression • MENOS_OP expression
   30           | expression • POR_OP expression
   31           | expression • DIV_OP expression
   31           | expression DIV_OP expression •

    $default  reduce using rule 31 (expression)


State 70

   16 statement: SI A_PAREN expression C_PAREN • statement SINO statement
   17          | SI A_PAREN expression C_PAREN • statement

    error     shift, and go to state 15
    LEER      shift, and go to state 16
    ESCRIBIR  shift, and go to state 17
    A_LLAVE   shift, and go to state 18
    SI        shift, and go to state 20
    MIENTRAS  shift, and go to state 21
    ID        shift, and go to state 22

    statement  go to state 73


State 71

   18 statement: MIENTRAS A_PAREN expression C_PAREN • statement

    error     shift, and go to state 15
    LEER      shift, and go to state 16
    ESCRIBIR  shift, and go to state 17
    A_LLAVE   shift, and go to state 18
    SI        shift, and go to state 20
    MIENTRAS  shift, and go to state 21
    ID        shift, and go to state 22

    statement  go to state 74


State 72

   14 statement: ID ASIG_OP expression SEMICOLON •

    $default  reduce using rule 14 (statement)


State 73

   16 statement: SI A_PAREN expression C_PAREN statement • SINO statement
   17          | SI A_PAREN expression C_PAREN statement •

    SINO  shift, and go to state 75

    SINO      [reduce using rule 17 (statement)]
    $default  reduce using rule 17 (statement)


State 74

   18 statement: MIENTRAS A_PAREN expression C_PAREN statement •

    $default  reduce using rule 18 (statement)


State 75

   16 statement: SI A_PAREN expression C_PAREN statement SINO • statement

    error     shift, and go to state 15
    LEER      shift, and go to state 16
    ESCRIBIR  shift, and go to state 17
    A_LLAVE   shift, and go to state 18
    SI        shift, and go to state 20
    MIENTRAS  shift, and go to state 21
    ID        shift, and go to state 22

    statement  go to state 76


State 76

   16 statement: SI A_PAREN expression C_PAREN statement SINO statement •

    $default  reduce using rule 16 (statement)
